# Compiladores1

Examen1_P5_2020/: fa2lexer.tar.xz
Examen1_P5_2020/Lexer/: expr_lexer.h
Examen1_P5_2020/Lexer/b/: CMakeCache.txt  Makefile  cmake_install.cmake  expr_lexer.cpp  expr_tokens.h  test_lexer
Examen1_P5_2020/Lexer/fa/: analizer.jff  bcomment.jff  constants.jff  expr_lexer.fa2l  identifier.jff
Examen1_P5_2020/Parser/: expr_grammar_ll1.txt  expr_lexer.h  expr_parser.cpp  expr_parser.h  expr_symbols.h
Examen1_P5_2020/Parser/b/: Makefile  (+3 more)
Examen2_P5_2020/: spl_ast.h  spl_interp.cpp  spl_interp.h
Examen2_P5_2020/tests/: CMakeLists.txt  test_ast.cpp
Proyecto/: TOKENS.xlsx
Proyecto/JFF/: TOKENS.xlsx  a.jff  b.jff  c.jff  comments.jff  constants.jff  d.jff  e.jff  f.jff  fa2lexer.fa2l  i.jff  identifiers.jff  m.jff  n.jff  o.jff  operators.jff  p.jff  r.jff  s.jff  t.jff  u.jff  v.jff  w.jff  x.jff
Proyecto/Lexico/: CMakeLists.txt  input.txt  input2.txt  lexer.h
Proyecto/Semantico/: Makefile  input.txt  lexer.h
Proyecto/Semantico/tests/: ASTNode.h  CMakeLists.txt  main.cpp  parser.cpp  parser.h  stmtInterp.cpp  stmtInterp.h
Proyecto/Sintactico/: input.txt  lexer.h
Proyecto/Sintactico/tests/: CMakeLists.txt  Sintactico.cpp  Sintactico.h  cpphv.txt  hov.cpp  main.cpp  test_lexer.cpp
Proyecto/jff/: TOKENS.xlsx  charOrString.jff  comments.jff  fa2lexer.fa2l  identifiers.jff  start.jff  zz.jff
Prueba1_P5_2020/: const_lexer.h
Prueba1_P5_2020/fa/: coments.jff  const_lexer.fa2l  constants.jff
Prueba1_P5_2020/tests/: CMakeLists.txt  test_lexer.cpp
Prueba2_P2_2020/: GrammarManual.txt  parser.cpp  parser.h
Prueba2_P2_2020/b/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  test_parser
(+25 files in other folders)
